--- a/app/templates/search.html
+++ b/app/templates/search.html
@@ -6,7 +6,7 @@
         <h3> Found {{ blogs| count }} matches </h3>
         <hr>
         <ul>
-            {{ macro.displayblogList(pitchs)}}
+            {{ macro.displayblogList(blogs)}}
         </ul>
 
     </div>
