--- a/app/templates/macros.html
+++ b/app/templates/macros.html
@@ -3,13 +3,13 @@
     <div class="well well-lg">
 
         <p>{{blog.blog| truncate(100)}}</p>
-        <p>Written by: {{blog.user.username}} <a href="/blog/{{blog.id}}" class="btn btn-primary pull-right">Enter your pitch</a>
+        <p>Written by: {{blog.writer.writername}} <a href="/blog/{{blog.id}}" class="btn btn-primary pull-right">Enter your pitch</a>
         </p>
     </div>
 </div>
 {%endfor%} {%endmacro%} {%macro displayComments(comment_list)%} {%for comment in comment_list%}
 <div class="col-md-12">
-    <h5>{{comment.user.username}}</h5>
+    <h5>{{comment.writer.writername}}</h5>
     <p>{{comment.comment}}</p>
 </div>
 {%endfor%} {%endmacro%}
