--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,24 +1,1 @@
-<!DOCTYPE html>
-<html>
-
-<head>
-    <meta charset="utf-8"> {% if title %}
-    <title> {{ title }}</title>
-    {% else %}
-    <title> Welcome to the best blog Review website </title>
-    {% endif %} {% extends 'bootstrap/base.html'%}
-
-    <!-- Navbar block  -->
-    {% block navbar %} {% include 'navbar.html' %} {% endblock %} {%block styles %} {{super()}}
-    <!--Importing the simple mde css and js files  -->
-    {{ simplemde.css}} {{ simplemde.js }} {% endblock %}
-
-</head>
-
-<body>
-    <!-- Content block -->
-
-    {% block content %} {% endblock%}
-</body>
-
-</html>
+{% extends 'bootstrap/base.html'%} {% block navbar %} {% include 'navbar.html' %} {% endblock %}
