--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -18,8 +18,8 @@
     </div>
 </div>
 <!-- <ul class="nav navbar-nav navbar-right">
-    {% if current_writer.is_authenticated %}
-    <li style="color:white;padding:15px;">{{current_writer.writername}}</li>
+    {% if current_user.is_authenticated %}
+    <li style="color:white;padding:15px;">{{current_user.writername}}</li>
     <li><a href="{{url_for('auth.logout')}}">Sign out</a></li>
     {% else %}
     <li><a href="{{url_for('auth.login')}}">Sign in</a></li>
@@ -28,8 +28,8 @@
 
 
 <ul class="nav navbar-nav navbar-right">
-    {% if current_writer.is_authenticated %}
-    <li><a href="{{url_for('main.update_profile',uname=current_writer.writername)}}">Profile</a></li>
+    {% if current_user.is_authenticated %}
+    <li><a href="{{url_for('main.update_profile',uname=current_user.username)}}">Profile</a></li>
     <li><a href="{{url_for('auth.logout')}}">Sign out</a></li>
     {% else %}
     <li><a href="{{url_for('auth.login')}}">Sign in</a></li>
