--- a/app/templates/update_post.html
+++ b/app/templates/update_post.html
@@ -1,7 +1,7 @@
 {% extends 'base.html'%} {% import 'macros.html' as macro%} {% import "bootstrap/wtf.html" as wtf %} {% block styles%} {{ super() }}
 <link rel="stylesheet" href="{{url_for('static',filename='css/index.css')}}"> {% endblock %} {% block content %}
 <div class="container">
-    {{wtf.quick_form(comment_form)}}
+    {{wtf.quick_form(form)}}
 
 </div>
 
