--- a/app/templates/single_post.html
+++ b/app/templates/single_post.html
@@ -3,5 +3,5 @@
 
     <img src="static/photos/no_dp.png" alt="">
     <h4>{{post.content}}</h4>
-    <p class="name">Author:Anabella TUYISENGE</p>
+    <p class="name">Author:tytyne</p>
     <a href="/new/comment/{{post.id}}" class="btn btn-primary">Add comment</a> {{macro.displayComments(comments)}} {%endblock%}
