--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -7,7 +7,7 @@
                   <span class="icon-bar"></span>
                   <span class="icon-bar"></span>
                 </button>
-            <a class="navbar-brand" href="/create_blogs">blogs </a>
+            <a class="navbar-brand" href="/">blogs </a>
         </div>
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
